<resources>
    <string name="app_name">Androidware</string>
    <string name="thumbnail">Thumbs up!</string>
    <string name="drawerOpen">Open!</string>
    <string name="drawerClose">Close!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_page_2">Page 2</string>
    <string name="nav_page_1">Page 1</string>
    <string name="title_activity_reschedule">Reschedule</string>
    <string name="reschedule_name">Name</string>
    <string name="reschedule_company">Company</string>
    <string name="reschedule_memo">Save Notes</string>
    <string name="reschedule_meeting">Save meeting to calendar</string>
    <string name="reschedule_neverAsk">Never ask for this contact</string>
    <string name="reschedule_cancel">No</string>
    <string name="reschedule_yes">Yes</string>
    <string name="dialog_action_ok">Ok</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_general_error_Message">Some Message</string>
</resources>
