<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/scrollContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/nameArea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#33B5E5"
                android:visibility="visible" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="12dp" >

                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/primary_text_dark"
                        android:textIsSelectable="false" />

                    <TextView
                        android:id="@+id/companyText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/primary_text_dark"
                        android:textIsSelectable="false" />
                </LinearLayout>

                <QuickContactBadge
                    android:id="@+id/quickContactBadge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp" >

                <EditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/reschedule_name"
                    android:inputType="textPersonName"
                    android:visibility="gone" >
                </EditText>

                <EditText
                    android:id="@+id/companyField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/reschedule_company"
                    android:visibility="gone" >
                </EditText>

                <EditText
                    android:id="@+id/memoField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/reschedule_memo"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:selectAllOnFocus="true" >

                    <requestFocus />
                </EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/dateField"
                        style="@style/AlertDialog.AppCompat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showDatePickerDialog"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Button
                        android:id="@+id/timeField"
                        style="@style/AlertDialog.AppCompat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="showTimePickerDialog"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/meetingField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reschedule_meeting" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/neverAskField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onNeverAgainToggle"
            android:text="@string/reschedule_neverAsk" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingTop="0dp" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCancelClick"
                android:text="@string/reschedule_cancel" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSaveClick"
                android:text="@string/reschedule_yes" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>